# serial-port-assistant

./: .gitignore  CMakeLists.txt
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
